<resources>
    <string name="app_name">Meetings</string>
    <string name="activity_login_title">Meetings authentification</string>
    <string name="login_email_hint">Email</string>
    <string name="login_pass_hint">Password</string>
    <string name="login_button_sign">Sign in</string>
    <string name="login_button_create">Create account</string>
    <string name="create_pass_hint">Repeat password</string>
    <string name="create_name_hint">Your name</string>
    <string name="create_pos_hint">Your position</string>
    <string name="loading">Connecting…</string>
    <string name="toast_acc_not_created">Failed to create account</string>
    <string name="toast_auth_failed">Auth failed</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_refresh">Refresh</string>
    <string name="participants"><![CDATA[Participants: <click here to add>]]></string>
    <string name="meetings_serialize">meetings.cer</string>
    <string name="meetings_ids_serialize">meetings_ids.cer</string>

    <string-array name="prior_list">
        <item>ASAP</item>
        <item>Planned</item>
        <item>As possible</item>
    </string-array>
</resources>
