<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/login_email_hint"
        android:ems="10"
        android:id="@+id/field_create_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/login_pass_hint"
        android:ems="10"
        android:id="@+id/field_create_pass1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/create_pass_hint"
        android:ems="10"
        android:id="@+id/field_create_pass2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/create_name_hint"
        android:ems="10"
        android:id="@+id/field_create_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/create_pos_hint"
        android:ems="10"
        android:id="@+id/field_create_position" />

    <Button
        android:text="@string/login_button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        android:id="@+id/button_create_signup" />
</LinearLayout>